--- a/Pitsa minutiga.html
+++ b/Pitsa minutiga.html
@@ -13,7 +13,7 @@
     <h3>Pitsa minutiga</h3>
     <img src="https://img.povar.ru/main/ab/b6/dd/dd/picca_quotminutkaquot-52182.JPG" alt="pitsa minutiga" width="350" height="250">
     <p>
-       Pasta kana ja brokkoliga - kiire ja lihtne roog, mis annab piisavalt energiat selleks, et loengutes aktiivne olla 
+       Kui restoranide peale raha kulutada ei taha, aga pitsa tahe suur, siis lahendus on olemas. Pitsa minutiga - lihtne ja kiire viis Itaalia koju tuua
     </p>
     <p>
         <a href="Pitsa minutiga2.html">Loe lähemalt</a>
