--- a/kotletid.html
+++ b/kotletid.html
@@ -3,22 +3,39 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<title>Hungry Brains</title>
-<body>
-<div> <h1>Hungry Brains</h1>
-    <h2>Tudengitelt tudengitele! Easy to do retseptid
-    </h2>
+<title>Kotletid</title>
+<h1>Kotletid</h1>
+<img src="https://www.santamariaworld.com/optimized/recipe-large/globalassets/russia/products/100518_shutterstock_465890087.png" alt="kotletid" width="350" height="250">
+<h2><strong>Koostisosad</strong></h2>
+<ul>
+    <li>Kanafilee - 700 grammmi</li>
+    <li>Sibul - 1 tk</li>
+    <li>Porgand - 1tk</li>
+    <li>Küüslauk</li>
+    <li>Leib - 150 grammi</li>
+    <li>Muna - 1 tk</li>
+    <li>Piim - 150 ml</li>
+    <li>Sool</li>
+    <li>Pipar</li>
+    <li>Taimeõli</li>
+<h2><strong>Valmistamine</strong></h2>
+<p>
+    1) Koori sibulat ja porgandid. Lõika fileed ja köögiviljad väikesteks tükkideks. Pane kõik blenderisse ning korralikult jahvata.
+</p>
+<p>
+    2) Lisa soola ja pipart.
+</p>
+<p>
+    3) Vala praepannile taimeõli ja soojendage seda keskmise kuumusega.
+</p>
+<p>
+    4) Moodustame lusikaga korralikud kotletid ja paneme need kohe pannile.
+</p>
+<p>
+    5) Prae kotlette mõlemalt poolt kenasti pruuniks.
+</p>
+<p>
+    6) Bon appetit!
+</p>
 </div>
-<div>
-    <h3>Kotletid</h3>
-    <img src="https://www.santamariaworld.com/optimized/recipe-large/globalassets/russia/products/100518_shutterstock_465890087.png" alt="kotletid" width="350" height="250">
-    <p>
-        Mahlased ja õrnad kotletid õhtusöögiks poole tunniga. Peaaegu vaeva nägemata ja maitsev eine laual.
-    </p>
-    <p>
-        <a href="kotletid.html">Loe lähemalt</a>
-    </p>
-
-</div>
-</body>
-</html>
+</ul>
