--- a/Lavaširull.html
+++ b/Lavaširull.html
@@ -3,22 +3,51 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<title>Hungry Brains</title>
-<body>
-<div> <h1>Hungry Brains</h1>
-    <h2>Tudengitelt tudengitele! Easy to do retseptid
-    </h2>
-</div>
-<div>
-    <h3>Lavaširull</h3>
-    <img src="https://img.povar.ru/main/2d/b2/4a/2e/salat_v_lavashe-23015.jpg" alt="lavaširull" width="350" height="250">
-    <p>
-        Lavaširull - ideaalne suupiste, mille valmistamiseks ei lähe kulinaarteadmisi vaja ja lisaks saab kõhu ilusti täis 
-    </p>
-    <p>
-        <a href="Lavaširull2.html">Loe lähemalt</a>
-    </p>
+<title>Lavaširull</title>
+<h1>Lavaširull</h1>
+<img src="https://img.povar.ru/main/2d/b2/4a/2e/salat_v_lavashe-23015.jpg" alt="lavaširull" width="350" height="250">
+<h2><strong>Koostisosad</strong></h2>
+<ul>
+    <li>Lavaš - 1tk</li>
+    <li>Majonees - 4spl</li>
+    <li>Valmis kanakints - 100g</li>
+    <li>Hapukur - 80g</li>
+    <li>Juust - 100g</li>
+    <li>Vorst - 100g</li>
+    <li>Tomat - 1tk</li>
+    <li>Šampinjonid - 1tk</li>
+    <li>Salati lehed</li>
+    <li>Till</li>
+    <li>Petersell</li>
+    
 
+<h2><strong>Valmistamine</strong></h2>
+<p>
+    1) Lõika šampinjon, juust, vorst ja tomat peenikesteks ribadeks 
+</p>
+<p>
+    2) Lõika kanakints väiksemateks kuubikuteks
+</p>
+<p>
+    3) Peenesta till, petersell ja salati lehed 
+</p>
+<p>
+    4) Võta lavaš ja määri see üleni majoneesiga 
+</p>
+<p>
+    5) Puista till, petersill ja salati lehed lavašile 
+</p>
+<p>
+    6) Hakka äärest alates ingrediente laduma nii, et paned viilud järjest ja kana nende peale
+</p>
+<p>
+    7) Keera lavaš üsna tugevasti kinni, aga jälgi, et sisu oleks sinu suhtes horisontaalselt
+</p>
+<p>
+    8) Lõika terava noaga võrdseteks tükkideks
+</p>
+<p>
+    9) Bon appetit!
+</p>
 </div>
-</body>
-</html>
+</ul>
