--- a/Lavaširull.html
+++ b/Lavaširull.html
@@ -2,52 +2,64 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style2.css">
 </head>
+
 <title>Lavaširull</title>
+
+<body>
 <h1>Lavaširull</h1>
-<img src="https://img.povar.ru/main/2d/b2/4a/2e/salat_v_lavashe-23015.jpg" alt="lavaširull" width="350" height="250">
+
+<div class="photo">
+<img src="https://img.povar.ru/main/2d/b2/4a/2e/salat_v_lavashe-23015.jpg" alt="lavaširull" width="380" height="280">
+</div>
+
+<div class="ingredients">
 <h2><strong>Koostisosad</strong></h2>
 <ul>
-    <li>Lavaš - 1tk</li>
-    <li>Majonees - 4spl</li>
-    <li>Valmis kanakints - 100g</li>
-    <li>Hapukur - 80g</li>
-    <li>Juust - 100g</li>
-    <li>Vorst - 100g</li>
-    <li>Tomat - 1tk</li>
-    <li>Šampinjonid - 1tk</li>
+    <li>Lavaš - 1 tk</li>
+    <li>Majonees - 4 spl</li>
+    <li>Valmis kanakints - 100 g</li>
+    <li>Hapukur - 80 g</li>
+    <li>Juust - 100 g</li>
+    <li>Vorst - 100 g</li>
+    <li>Tomat - 1 tk</li>
+    <li>Šampinjonid - 1 tk</li>
     <li>Salati lehed</li>
     <li>Till</li>
     <li>Petersell</li>
-    
+</ul>
+</div>   
 
+<div class="making">
 <h2><strong>Valmistamine</strong></h2>
 <p>
-    1) Lõika šampinjon, juust, vorst ja tomat peenikesteks ribadeks 
+    1) Lõika šampinjon, juust, vorst ja tomat peenikesteks ribadeks.
 </p>
 <p>
-    2) Lõika kanakints väiksemateks kuubikuteks
+    2) Lõika kanakints väiksemateks kuubikuteks.
 </p>
 <p>
-    3) Peenesta till, petersell ja salati lehed 
+    3) Peenesta till, petersell ja salati lehed. 
 </p>
 <p>
-    4) Võta lavaš ja määri see üleni majoneesiga 
+    4) Võta lavaš ja määri see üleni majoneesiga.
 </p>
 <p>
-    5) Puista till, petersill ja salati lehed lavašile 
+    5) Puista till, petersill ja salati lehed lavašile.
 </p>
 <p>
-    6) Hakka äärest alates ingrediente laduma nii, et paned viilud järjest ja kana nende peale
+    6) Hakka äärest alates ingrediente laduma nii, et paned viilud järjest ja kana nende peale.
 </p>
 <p>
-    7) Keera lavaš üsna tugevasti kinni, aga jälgi, et sisu oleks sinu suhtes horisontaalselt
+    7) Keera lavaš üsna tugevasti kinni, aga jälgi, et sisu oleks sinu suhtes horisontaalselt.
 </p>
 <p>
-    8) Lõika terava noaga võrdseteks tükkideks
+    8) Lõika terava noaga võrdseteks tükkideks.
 </p>
 <p>
     9) Bon appetit!
 </p>
 </div>
-</ul>
+</body>
+</html>
