--- a/Vorstidmikrolaineahjus.html
+++ b/Vorstidmikrolaineahjus.html
@@ -2,38 +2,51 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style2.css">
 </head>
+
 <title>Vorstid mikrolaineahjus</title>
+
+<body>
 <h1>Vorstid mikrolaineahjus</h1>
-<img src="https://img.povar.ru/main/89/ee/15/a9/sosiski_v_mikrovolnovke-56004.jpg" alt="vorstid mikrolaineahjus" width="350" height="250">
+
+<div class="photo">
+<img src="https://img.povar.ru/main/89/ee/15/a9/sosiski_v_mikrovolnovke-56004.jpg" alt="vorstid mikrolaineahjus" width="380" height="300">
+</div>
+
+<div class="ingredients">
 <h2><strong>Koostisosad</strong></h2>
 <ul>
-    <li>Vorstid - 8tk</li>
-    <li>Juust - 200g</li>
+    <li>Vorstid - 8 tk</li>
+    <li>Juust - 200 g</li>
     <li>Sinep</li>
     <li>Ketšup</li>
+</ul>
+</div>
    
+<div class="making">
 <h2><strong>Valmistamine</strong></h2>
 <p>
-    1) Eemalda toidukile, kui see olemas 
+    1) Eemalda toidukile, kui see olemas.
 </p>
 <p>
-    2) Tee pikuti iga vorsti sisse mitte sügav lõige 
+    2) Tee pikuti iga vorsti sisse mitte sügav lõige. 
 </p>
 <p>
-    3) Määri iga vorsti lõige seest sinepi ja ketšupiga
+    3) Määri iga vorsti lõige seest sinepi ja ketšupiga.
 </p>
 <p>
-    4) Lõika juust viiludega nii, et nad mahuksid vorsti sisse
+    4) Lõika juust viiludega nii, et nad mahuksid vorsti sisse.
 </p>
 <p>
-    5) Aseta vorstid anumasse, mis sobib mikrolaineahjus soojendamiseks ja lisa selle põhja sisse natukene vett 
+    5) Aseta vorstid anumasse, mis sobib mikrolaineahjus soojendamiseks ja lisa selle põhja sisse natukene vett. 
 </p>
 <p>
-    6) Lülita mikrolaineahi 2-3 minutiks 600 Watti juures sisse
+    6) Lülita mikrolaineahi 2-3 minutiks 600 Watti juures sisse.
 </p>
 <p>
     9) Bon appetit!
 </p>
 </div>
-</ul>
+</body>
+</html>
