--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css">
 </head>
+
 <title>Hungry Brains</title>
+
 <body>
-<div class="hat"><h1>Hungry Brains</h1>
+<div class="hat">
+    <h1>Hungry Brains</h1>
     <h2>Tudengitelt tudengitele! Easy to do retseptid
     </h2>
 </div>
+
 <div class="recipes">
     <h3>Kotletid</h3>
     <img src="https://www.santamariaworld.com/optimized/recipe-large/globalassets/russia/products/100518_shutterstock_465890087.png" alt="kotletid" width="350" height="250">
@@ -50,7 +54,7 @@
     <h3>Spargli omlett</h3>
     <img src="https://img.povar.ru/main/ce/23/2a/99/omlet_so_sparjei-82883.jpg" alt="spargli omlett" width="350" height="250">
     <p>
-        Spargli omlett - hea hommikusöök, mis annab jõudu ja vajalikke mineraale valguga päeva alguseks
+        Spargli omlett - hea hommikusöök, mis annab jõudu ja vajalikke mineraale koos valguga päeva alguseks
     </p>
     <p>
         <a href="Spargliomlett.html">Loe lähemalt</a>
@@ -98,6 +102,7 @@
     </p>
     <p>
         <a href="Pannkoogid.html">Loe lähemalt</a>
-    </p></div>
+    </p>
+</div>
 </body>
 </html>
