--- a/Banaanimuffinid.html
+++ b/Banaanimuffinid.html
@@ -2,26 +2,49 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style2.css">
 </head>
+
 <title>Banaanimuffinid</title>
+
+<body>
 <h1>Banaanimuffinid</h1>
-<img src=http://v.img.com.ua/nxs75/b/600x500/9/3e/e9386baf92104ddd1220de6378aaf3e9.jpg alt="Pannkoogid" width="350" height="250">
+
+<div class="photo">
+<img src=http://v.img.com.ua/nxs75/b/600x500/9/3e/e9386baf92104ddd1220de6378aaf3e9.jpg alt="banaanimuffinid" width="380" height="300">
+</div>
+
+<div class="ingredients">
 <h2><strong>Koostisosad</strong></h2>
 <ul>
     <li>Banaanid - 3 tk</li>
     <li>Munad - 3 tk</li>
     <li>Keefir - 100 ml</li>
-    <li>mandlijahu - 50 grammi</li>
-    <li>kookosjahu - 50 grammi</li>
+    <li>Mandlijahu - 50 g</li>
+    <li>Kookosjahu - 50 g</li>
     <li>Küpsetuspulber - 0.5 tl</li>
     <li>Sool - 0.5 tl</li>
-    <li>Šokolaad - 50 grammi</li>
+    <li>Šokolaad - 50 g</li>
 </ul>
-<h2><strong>Valmistamine</strong></h2>
-<p>1) Koori banaanid ja suru kahvliga tükiliseks püreeks.</p>
-<p>2) Klopi juurde munad ja keefir.</p>
-<p>3) Sega kuivained omavahel ning lisa taignasse</p>
-<p>4) Jaota tainas muffinivormide vahel ning küpseta muffineid 180 kraadi juures pöördõhuga 16-20 minutit.</p>
-<p>5) Bon appetit!</p>
 </div>
-</ul>
+
+<div class="making">
+<h2><strong>Valmistamine</strong></h2>
+<p>
+    1) Koori banaanid ja suru kahvliga tükiliseks püreeks.
+</p>
+<p>
+    2) Klopi juurde munad ja keefir.
+</p>
+<p>
+    3) Sega kuivained omavahel ning lisa taignasse.
+</p>
+<p>
+    4) Jaota tainas muffinivormide vahel ning küpseta muffineid 180 kraadi juures pöördõhuga 16-20 minutit.
+</p>
+<p>
+    5) Bon appetit!
+</p>
+</div>
+</body>
+</html>
