--- a/Pastakanajabrokkoliga.html
+++ b/Pastakanajabrokkoliga.html
@@ -2,64 +2,77 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style2.css">
 </head>
+
 <title>Spargli omlett</title>
+
+<body>
 <h1>Spargli omlett</h1>
-<img src="https://img.povar.ru/main/e9/a7/79/c4/pasta_s_kuricei_i_brokkoli-60976.jpg" alt="pasta kana ja brokkoliga" width="350" height="250">
+
+<div class="photo">
+<img src="https://img.povar.ru/main/e9/a7/79/c4/pasta_s_kuricei_i_brokkoli-60976.jpg" alt="pasta kana ja brokkoliga" width="380" height="300">
+</div>
+
+<div class="ingredients">
 <h2><strong>Koostisosad</strong></h2>
 <ul>
-    <li>Makaronid - 400g</li>
-    <li>Brokkoli - 1tk</li>
-    <li>Kanafilee - 4tk</li>
-    <li>Piim - 200ml</li>
-    <li>Riivjuust - 150g</li>
-    <li>Või - 2spl</li>
-    <li>Oliiviõli - 1spl</li>
+    <li>Makaronid - 400 g</li>
+    <li>Brokkoli - 1 tk</li>
+    <li>Kanafilee - 4 tk</li>
+    <li>Piim - 200 ml</li>
+    <li>Riivjuust - 150 g</li>
+    <li>Või - 2 spl</li>
+    <li>Oliiviõli - 1 spl</li>
     <li>Sool</li>
     <li>Maitseained</li>
+</ul>
+</div>
 
+<div class="making">
 <h2><strong>Valmistamine</strong></h2>
 <p>
-    1) Eralda väiksemad brokkolid ja lõika need tükkideks 
+    1) Eralda väiksemad brokkolid ja lõika need tükkideks.
 </p>
 <p>
-    2) Lase potis vesi keema ja lisa sinna soola
+    2) Lase potis vesi keema ja lisa sinna soola.
 </p>
 <p>
-    3) Aseta makaronid potti
+    3) Aseta makaronid potti.
 </p>
 <p>
-    4) Lisa makaronide juurde lõigatud brokkoli 
+    4) Lisa makaronide juurde lõigatud brokkoli. 
 </p>
 <p>
-    5) Keeda makaronid pakil näidatust 1-2 minutit vähem
+    5) Keeda makaronid pakil näidatust 1-2 minutit vähem.
 </p>
 <p>
-    6) Aseta keedetud makaronid brokkoliga kõrvale
+    6) Aseta keedetud makaronid brokkoliga kõrvale.
 </p>
 <p>
-    7) Lõika kanafilee väiksemateks tükkideks
+    7) Lõika kanafilee väiksemateks tükkideks.
 </p>
 <p>
-    8) Lase pannil oliivõliga soojeneda ja lisa sinna kanafilee
+    8) Lase pannil oliivõliga soojeneda ja lisa sinna kanafilee.
 </p>
 <p>
-    9) Lisa maitse järgi maitseained ja prae kana pruunikaks 
+    9) Lisa maitse järgi maitseained ja prae kana pruunikaks. 
 </p>
 <p>
-    10) Lisa toatemperatuuriga piim pannile
+    10) Lisa toatemperatuuriga piim pannile.
 </p>
 <p>
-    11) Lisa makaronid brokkoliga pannile
+    11) Lisa makaronid brokkoliga pannile.
 </p>
 <p>
-    12) Lisa riivjuust pannile
+    12) Lisa riivjuust pannile.
 </p>
 <p>
-    13) Segades prae 3-4 minutit hetkeni kuni kana ja makaronid valmis on
+    13) Segades prae 3-4 minutit hetkeni kuni kana ja makaronid valmis on.
 </p>
 <p>
     14) Bon appetit!
 </p>
 </div>
-</ul>
+</body>
+</html>
