--- a/Spargliomlett.html
+++ b/Spargliomlett.html
@@ -2,35 +2,47 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style2.css">
 </head>
+
 <title>Spargli omlett</title>
+
+<body>
 <h1>Spargli omlett</h1>
-<img src="https://img.povar.ru/main/ce/23/2a/99/omlet_so_sparjei-82883.jpg" alt="spargli omlett" width="350" height="250">
+
+<div class="photo">
+<img src="https://img.povar.ru/main/ce/23/2a/99/omlet_so_sparjei-82883.jpg" alt="spargli omlett" width="380" height="300">
+</div>
+
+<div class="ingredients">
 <h2><strong>Koostisosad</strong></h2>
 <ul>
-    <li>Munad - 2tk</li>
-    <li>Piim - 2spl</li>
-    <li>Spargel - 4tk</li>
+    <li>Munad - 2 tk</li>
+    <li>Piim - 2 spl</li>
+    <li>Spargel - 4 tk</li>
     <li>Pipar</li>
     <li>Sool</li>
     <li>Taimeõli</li>
+</ul>
+</div>
 
+<div class="making">
 <h2><strong>Valmistamine</strong></h2>
 <p>
-    1) Klopi munad, piim, sool ja pipar kokku 
+    1) Klopi munad, piim, sool ja pipar kokku. 
 </p>
 <p>
-    2) Eelsoojenda praepann, lisa natuke taimeõli ja aseta sinna spargli kaunad 
+    2) Eelsoojenda praepann, lisa natuke taimeõli ja aseta sinna spargli kaunad. 
 </p>
 <p>
-    3) Valage vahustatud mass pannile
+    3) Vala vahustatud mass pannile.
 </p>
 <p>
-    4) Prae omlett mõlemalt poolt seni, kuni ääred on muutunud krõbedaks
+    4) Prae omlett mõlemalt poolt seni, kuni ääred on muutunud krõbedaks.
 </p>
 <p>
     5) Bon appetit!
 </p>
 </div>
-</ul>
-
+</body>
+</html>
