--- a/kotletid.html
+++ b/kotletid.html
@@ -2,22 +2,35 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Style2.css">
 </head>
+
 <title>Kotletid</title>
+
+<body>
 <h1>Kotletid</h1>
-<img src="https://www.santamariaworld.com/optimized/recipe-large/globalassets/russia/products/100518_shutterstock_465890087.png" alt="kotletid" width="350" height="250">
+
+<div class="photo">
+<img src="https://www.santamariaworld.com/optimized/recipe-large/globalassets/russia/products/100518_shutterstock_465890087.png" alt="kotletid" width="380" height="300">
+</div>
+
+<div class="ingredients">
 <h2><strong>Koostisosad</strong></h2>
 <ul>
-    <li>Kanafilee - 700 grammmi</li>
+    <li>Kanafilee - 700 g</li>
     <li>Sibul - 1 tk</li>
-    <li>Porgand - 1tk</li>
-    <li>Küüslauk</li>
-    <li>Leib - 150 grammi</li>
+    <li>Porgand - 1 tk</li>
+    <li>Leib - 150 g</li>
     <li>Muna - 1 tk</li>
     <li>Piim - 150 ml</li>
+    <li>Küüslauk</li>
     <li>Sool</li>
     <li>Pipar</li>
     <li>Taimeõli</li>
+</ul>
+</div>
+
+<div class="making">
 <h2><strong>Valmistamine</strong></h2>
 <p>
     1) Koori sibulat ja porgandid. Lõika fileed ja köögiviljad väikesteks tükkideks. Pane kõik blenderisse ning korralikult jahvata.
@@ -26,16 +39,17 @@
     2) Lisa soola ja pipart.
 </p>
 <p>
-    3) Vala praepannile taimeõli ja soojendage seda keskmise kuumusega.
+    3) Vala praepannile taimeõli ja soojenda seda keskmise kuumuse juures.
 </p>
 <p>
-    4) Moodustame lusikaga korralikud kotletid ja paneme need kohe pannile.
+    4) Vooli lusikaga korralikud kotletid ja pane need kohe pannile.
 </p>
 <p>
-    5) Prae kotlette mõlemalt poolt kenasti pruuniks.
+    5) Prae kotletid mõlemalt poolt kenasti pruuniks.
 </p>
 <p>
     6) Bon appetit!
 </p>
 </div>
-</ul>
+</body>
+</html>
